--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,15 @@ services:
     build: .
     image: spuf/swarm-tcp-proxy
     environment:
-      SERVICES: "app:8080"
-      CONNECTION_TIMEOUT: 5m
+      PRINT_CONFIG: "true"
+      STATS_ADDR: "0.0.0.0:3333"
+      SERVICE_tcp_app_ADDR: "app:8080"
+      SERVICE_tcp_app_SERVER_OPTION: "check send-proxy"
+      SERVICE_tcp_app_LOG: "true"
+      SERVICE_https_ADDR: "app:8081"
+      SERVICE_https_SERVER_OPTION: "send-proxy"
+      SERVICE_https_TIMEOUT: "5m"
+      SERVICE_https_LOG: "true"
     ports:
       - "8080:8080"
       - "3333:3333"
